Changes to be committed:
modified: README.md
modified: docker-compose.yaml
modified: npm-admin

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
-  webapp:
+  proxy:
     container_name: reverse-proxy-server
     hostname: reverse-proxy-server
     restart: unless-stopped
@@ -10,8 +10,8 @@ services:
       - 81:81
       - 443:443
     volumes:
-      - data:/data
-      - letsencrypt:/etc/letsencrypt
+      - ./data:/data
+      - ./letsencrypt:/etc/letsencrypt
     networks:
       - net
     deploy:
@@ -22,11 +22,9 @@ services:
         reservations:
           cpus: "1"
           memory: 64M
-    environment:
-      - PUID=1000
-      - PGID=1000
-volumes:
-  data:
-  letsencrypt:
+    # Optional
+    # environment:
+    #   - PUID=1000
+    #   - PGID=1000
 networks:
   net:
